[JBWS-4027] Misc fixes to make wsconsume/wsprovide tasks run and most of testsuite passing