@@ -65,7 +65,7 @@
     <jbossws.api.version>1.0.4-SNAPSHOT</jbossws.api.version>
     <jbossws.spi.version>3.2.0-SNAPSHOT</jbossws.spi.version>
     <jbossws.common.version>3.2.0-SNAPSHOT</jbossws.common.version>
-    <jbossws.common.tools.version>1.2.3.Final</jbossws.common.tools.version>
+    <jbossws.common.tools.version>1.2.4-SNAPSHOT</jbossws.common.tools.version>
     <jbossws.wildfly902.version>5.1.1.Final</jbossws.wildfly902.version>
     <jbossws.wildfly1000.version>5.1.4.Final</jbossws.wildfly1000.version>
     <jbossws.wildfly1010.version>5.2.0-SNAPSHOT</jbossws.wildfly1010.version>
@@ -106,6 +106,7 @@
     <velocity.version>1.7</velocity.version>
     <xerces.version>2.9.1</xerces.version>
     <xmlsec.version>2.0.8</xmlsec.version>
+    <xsom.version>20140925</xsom.version>
     <wss4j.version>2.1.8</wss4j.version>
     <wstx.version>5.0.3</wstx.version>
     <shrinkwrap.version>1.1.3</shrinkwrap.version>
@@ -116,6 +117,7 @@
     <jacc.api.version>1.0.0.Final</jacc.api.version>
     <javax.inject.version>1</javax.inject.version>
     <modular.jdk.args/>
+    <modular.jdk.props/>
   </properties>
 
 
@@ -1182,6 +1184,21 @@
         <version>${jaxb.impl.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>codemodel</artifactId>
+        <version>${jaxb.impl.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xsom</groupId>
+        <artifactId>xsom</artifactId>
+        <version>${xsom.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind.external</groupId>
+        <artifactId>rngom</artifactId>
+        <version>${jaxb.impl.version}</version>
+      </dependency>
+      <dependency>
         <groupId>commons-logging</groupId>
         <artifactId>commons-logging</artifactId>
         <version>${commons.logging.version}</version>
@@ -1371,7 +1388,7 @@
         <jbossws.integration.target>wildfly902</jbossws.integration.target>
         <jboss.home>${server.home}</jboss.home>
         <jboss.version>${wildfly902.version}</jboss.version>
-        <additionalJvmArgs>${ipVerArgs}</additionalJvmArgs>
+        <additionalJvmArgs>${ipVerArgs} ${modular.jdk.props} ${modular.jdk.args}</additionalJvmArgs>
         <additionalGroovyScriptSuffix></additionalGroovyScriptSuffix>
       </properties>
       <modules>
@@ -1390,7 +1407,7 @@
         <jbossws.integration.target>wildfly1000</jbossws.integration.target>
         <jboss.home>${server.home}</jboss.home>
         <jboss.version>${wildfly1000.version}</jboss.version>
-        <additionalJvmArgs>${ipVerArgs}</additionalJvmArgs>
+        <additionalJvmArgs>${ipVerArgs} ${modular.jdk.props} ${modular.jdk.args}</additionalJvmArgs>
         <additionalGroovyScriptSuffix></additionalGroovyScriptSuffix>
       </properties>
       <modules>
@@ -1409,7 +1426,7 @@
         <jbossws.integration.target>wildfly1010</jbossws.integration.target>
         <jboss.home>${server.home}</jboss.home>
         <jboss.version>${wildfly1010.version}</jboss.version>
-        <additionalJvmArgs>${ipVerArgs}</additionalJvmArgs>
+        <additionalJvmArgs>${ipVerArgs} ${modular.jdk.props} ${modular.jdk.args}</additionalJvmArgs>
         <additionalGroovyScriptSuffix></additionalGroovyScriptSuffix>
       </properties>
       <modules>
@@ -1428,7 +1445,7 @@
         <jbossws.integration.target>wildfly1100</jbossws.integration.target>
         <jboss.home>${server.home}</jboss.home>
         <jboss.version>${wildfly1100.version}</jboss.version>
-        <additionalJvmArgs>${ipVerArgs} ${modular.jdk.args}</additionalJvmArgs>
+        <additionalJvmArgs>${ipVerArgs} ${modular.jdk.props} ${modular.jdk.args}</additionalJvmArgs>
         <additionalGroovyScriptSuffix></additionalGroovyScriptSuffix>
       </properties>
       <modules>
@@ -1463,8 +1480,21 @@
       </activation>
       <properties>
         <modular.jdk.args>
-          --add-modules java.se.ee --upgrade-module-path /home/opalka/JDK9_MODULES/UPGRADEABLE_MODULES_JBOSSWS
-          --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+          --add-modules java.se.ee
+        </modular.jdk.args>
+        <modular.jdk.props>
+          -Dsun.util.logging.disableCallerCheck=true
+          -Dsun.reflect.debugModuleAccessChecks=true
+          --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+          --add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
+          --add-exports=java.security.sasl/com.sun.security.sasl.digest=ALL-UNNAMED
+          --add-exports=java.security.sasl/com.sun.security.sasl.ntlm=ALL-UNNAMED
+          --add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED
+          --add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
+          --add-exports=java.xml/com.sun.org.apache.xpath.internal.jaxp=ALL-UNNAMED
+          --add-exports=java.xml/com.sun.xml.internal.stream=ALL-UNNAMED
+          --add-exports=java.xml/javax.xml.namespace=ALL-UNNAMED
+          --add-exports=jdk.security.jgss/com.sun.security.sasl.gsskerb=ALL-UNNAMED
           --add-opens=java.base/java.lang=ALL-UNNAMED
           --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
           --add-opens=java.base/java.security=ALL-UNNAMED
@@ -1472,11 +1502,14 @@
           --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
           --add-opens=java.base/java.math=ALL-UNNAMED
           --add-opens=java.base/java.net=ALL-UNNAMED
+          --add-opens=java.base/java.nio=ALL-UNNAMED
           --add-opens=java.base/java.util=ALL-UNNAMED
           --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
+          --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
           --add-opens=java.management/javax.management=ALL-UNNAMED
           --add-opens=java.management/javax.management.openmbean=ALL-UNNAMED
-        </modular.jdk.args>
+          --add-opens=java.xml/javax.xml.namespace=ALL-UNNAMED
+        </modular.jdk.props>
         <!--modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true -Djaxb.debug=true</modular.jdk.props-->
       </properties>
     </profile>
